Fix: Altered Available Meal Spacing

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@
 @tailwind utilities;
 
 * {
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
